[tool.poetry]
name = "geo-metadata-cloud-run"
version = "0.1.0"
description = "Example code for blog post using cloud run for geo metadata as json"
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.52.0"
uvicorn = "^0.12.0"
omicidx = { git = "https://github.com/omicidx/omicidx-parsers" }
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
